# cogstreams

./: .gitignore  Dockerfile  README.md  config.cfg  times.md
src/: CMakeLists.txt  client.cpp  client.hpp  helper.cpp  helper.hpp  main.cpp  main_client.cpp  main_server.cpp  server.cpp  server.hpp
